--- a/Glowb/Storyboards/Interactions.storyboard
+++ b/Glowb/Storyboards/Interactions.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Y6q-kl-lQB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Y6q-kl-lQB">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,6 +21,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" image="gear" translatesAutoresizingMaskIntoConstraints="NO" id="4e6-aY-qze">
+                                <rect key="frame" x="24" y="317" width="33" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="33" id="0P7-1f-6j5"/>
+                                    <constraint firstAttribute="height" constant="33" id="vLc-NR-3it"/>
+                                </constraints>
+                            </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="khr-dw-KGm">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -33,7 +40,7 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JtJ-ZP-IxA">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JtJ-ZP-IxA">
                                 <rect key="frame" x="16" y="629" width="22" height="22"/>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
@@ -43,8 +50,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="4e6-aY-qze" firstAttribute="centerY" secondItem="Md0-dw-crH" secondAttribute="centerY" id="KIC-EU-2fc"/>
                             <constraint firstItem="q0o-rX-sbm" firstAttribute="top" secondItem="JtJ-ZP-IxA" secondAttribute="bottom" constant="16" id="aP4-dn-9A6"/>
                             <constraint firstItem="JtJ-ZP-IxA" firstAttribute="leading" secondItem="Md0-dw-crH" secondAttribute="leading" constant="16" id="ior-BK-arn"/>
+                            <constraint firstItem="4e6-aY-qze" firstAttribute="leading" secondItem="Md0-dw-crH" secondAttribute="leading" constant="24" id="qP3-HW-PLL"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="themeAdapter">
@@ -54,6 +63,7 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="khr-dw-KGm" id="MPE-BU-mAh"/>
+                        <outlet property="gearIcon" destination="4e6-aY-qze" id="qtx-1g-ODf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jiv-OJ-iDp" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -61,4 +71,7 @@
             <point key="canvasLocation" x="-420" y="209.14542728635683"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="gear" width="32" height="32"/>
+    </resources>
 </document>
