--- a/Glowb/Views/Cells/CollectionView/InteractionCollectionViewCell.xib
+++ b/Glowb/Views/Cells/CollectionView/InteractionCollectionViewCell.xib
@@ -34,7 +34,7 @@
                                 <blurEffect style="dark"/>
                             </visualEffectView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gw-mW-AOn" customClass="PrimaryTextLabel" customModule="Glowb" customModuleProvider="target">
-                                <rect key="frame" x="99" y="86.5" width="73" height="33.5"/>
+                                <rect key="frame" x="99" y="69.5" width="73" height="33.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -45,10 +45,10 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnF-fq-lpm">
-                                <rect key="frame" x="97" y="123" width="76" height="27"/>
+                                <rect key="frame" x="109" y="111" width="52.5" height="17"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6xf-bz-fon" customClass="PrimaryTextLabel" customModule="Glowb" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="20" width="35.5" height="12"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="35.5" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -59,7 +59,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Gu-gY-xAG" customClass="ColorPreviewView" customModule="Glowb" customModuleProvider="target">
-                                        <rect key="frame" x="60" y="20" width="12" height="12"/>
+                                        <rect key="frame" x="43.5" y="4" width="9" height="9"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="9" id="Vse-Au-OUz"/>
@@ -77,8 +77,8 @@
                                     <constraint firstAttribute="trailing" secondItem="3Gu-gY-xAG" secondAttribute="trailing" id="vze-xG-pJG"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7QM-vY-ZvZ" customClass="Button" customModule="Glowb" customModuleProvider="target">
-                                <rect key="frame" x="75" y="150" width="120" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7QM-vY-ZvZ" customClass="PrimaryButton" customModule="Glowb" customModuleProvider="target">
+                                <rect key="frame" x="75" y="164" width="120" height="44"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.029999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="39M-5F-eeC"/>
@@ -89,6 +89,11 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="themeAdapter">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o7J-rO-aOR" customClass="Button" customModule="Glowb" customModuleProvider="target">
                                 <rect key="frame" x="110.5" y="194" width="50" height="50"/>
